@@ -47,7 +47,10 @@ else: unix:!android: target.path = /opt/$${TARGET}/bin
 LIBS += -L$$PWD/hamlib/ -lhamlib
 INCLUDEPATH += $$PWD/hamlib
 
-VERSION = 1.2.0
+RESOURCES += qdarkstyle/dark/darkstyle.qrc
+# RESOURCES += qdarkstyle/light/lightstyle.qrc
+
+VERSION = 1.3.0
 
 RC_ICONS = catradio.ico
 
