@@ -5,6 +5,7 @@
 
 #include <QSettings>
 #include <QFile>
+#include <QMessageBox>
 
 
 extern guiConfig guiConf;
@@ -17,6 +18,7 @@ DialogSetup::DialogSetup(QWidget *parent) :
     ui->setupUi(this);
 
    if (guiConf.vfoDisplayMode) ui->radioButton_vfoDispMode_UD->setChecked(true);
+   if (guiConf.darkTheme) ui->radioButton_themeDark->setChecked(true);
 }
 
 DialogSetup::~DialogSetup()
@@ -24,20 +26,23 @@ DialogSetup::~DialogSetup()
     delete ui;
 }
 
-void DialogSetup::on_radioButton_vfoDispMode_LR_toggled(bool checked)
-{
-    if (checked) guiConf.vfoDisplayMode=0;
-}
-
-void DialogSetup::on_radioButton_vfoDispMode_UD_toggled(bool checked)
-{
-    if (checked) guiConf.vfoDisplayMode=1;
-}
-
 void DialogSetup::on_buttonBox_accepted()
 {
+    if ((guiConf.darkTheme != ui->radioButton_themeDark->isChecked()))
+    {
+        QMessageBox msgBox;
+        msgBox.setWindowTitle("Theme");
+        msgBox.setText("Please, restart CatRadio to make effective the theme.");
+        msgBox.setIcon(QMessageBox::Information);
+        msgBox.setStandardButtons(QMessageBox::Ok);
+        msgBox.exec();
+    }
+
+    guiConf.vfoDisplayMode = ui->radioButton_vfoDispMode_UD->isChecked();
+    guiConf.darkTheme = ui->radioButton_themeDark->isChecked();
+
     //* Save settings in catradio.ini
     QSettings configFile(QString("catradio.ini"), QSettings::IniFormat);
     configFile.setValue("vfoDisplayMode", guiConf.vfoDisplayMode);
+    configFile.setValue("darkTheme", guiConf.darkTheme);
 }
-
