@@ -3,9 +3,10 @@ CatRadio
 (+ New, * Updated, - Removed)
 
 1.3.0 - 2022-xx-xx
+	+ Dark theme
 	+ MIC levels
 	* Bug fix: Sort bandwidth list
-	* General improvements
+	* General GUI and code improvements
 	+ NB2
 	* Bug fix: Sliders
 	+ Sub meter COMP, ID, VDD
